# PatchPilotAI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: dataset.jsonl  run_evals.py
src/resolver/: config.py  graph.py  state.py
src/resolver/agents/: __init__.py  code_reader.py  code_writer.py  planner.py  pr_opener.py  test_writer.py
src/resolver/api/: main.py
src/resolver/prompts/: code_reader.md  code_writer.md  planner.md  test_writer.md
src/resolver/tools/: github_tools.py  patching.py  repo_indexer.py  retriever.py  shell.py  workspace.py
src/resolver/ui/: app.py
tests/: test_code_writer_unit.py  test_config_langsmith.py  test_github_tools.py  test_graph_smoke.py  test_repo_indexer_fallback.py  test_state.py  test_test_writer_unit.py
tests/fixtures/: sample_issue.json
