[project]
name = "multi-agent-issue-resolver"
version = "0.1.0"
description = "Stateful multi-agent GitHub issue resolver built with LangGraph"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "fastapi>=0.115.0",
  "gitpython>=3.1.43",
  "langchain-openai>=0.3.0",
  "langgraph>=0.3.0",
  "langgraph-checkpoint>=2.0.0",
  "langgraph-supervisor>=0.0.20",
  "langsmith>=0.3.0",
  "pydantic-settings>=2.7.0",
  "pygithub>=2.5.0",
  "python-dotenv>=1.0.1",
  "tenacity>=9.0.0",
  "unidiff>=0.7.5",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.40.0",
]
vector = [
  "chromadb>=0.5.23",
  "langchain-community>=0.3.0",
]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "types-requests>=2.32.0.20250328",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resolver"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".work", ".chroma", ".venv"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
